--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "derek",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.0",
     "mysql2": "^3.14.1",
+    "nodemon": "^3.1.10",
     "uuid": "^11.1.0"
   }
 }
